--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dompurify": "^3.1.6",
+    "dotenv": "^16.4.5",
     "lucide": "^0.408.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
