--- a/api/.gitignore
+++ b/api/.gitignore
@@ -7,3 +7,7 @@ node_modules
 .env.development
 .env.test
 .env.production
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
