--- a/socket/.gitignore
+++ b/socket/.gitignore
@@ -5,3 +5,7 @@
 .env.development
 .env.test
 .env.production
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
